fix icon spacing in mobile nav, fix mobile nav search input field width and onclick behaviour

--- a/backend/blog/static/css/blog.css
+++ b/backend/blog/static/css/blog.css
@@ -32,6 +32,10 @@
     .navbar-item {
         padding: 0.5rem 0.5rem;
     }
+
+    #title-search-input {
+        max-width: 150px;
+    }
 }
 
 /* widescreen */
@@ -79,8 +83,4 @@
 .swiper-slide .card-image {
     border-radius: 25px;
     overflow: hidden;
-}
-
-#title-search-icon {
-    cursor: pointer;
 }
